2004-08-19  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b121

	* Fix: Typos.

2004-08-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b120

	* Change: Extra whitespace in despam-comments

	* Fix: Missing echo in save_photos

	* Change: Prevent non-admin users from changing their own usernames via user
	  preferences

	* Change: Use & refs in get*Vars to save a miniscule amount of memory

2004-08-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b119

	* Fix: Added a setup option for "slowPhotoCount".  The accurate photo count
	  on the Gallery index page was a much requested change, however it proved to
	  be so slow on some machines/Galleries that this will disable it unless
	  explicitly enabled by the user during setup.  (Galleries with vast numbers
	  of albums or images could take as long as 30 seconds to load the index, by
	  user reports)

2004-08-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b118

	* Fix: Variable ordering bug in user_preferences

2004-08-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b117

        * Fix: Navigation bar width was dependant on whether images were resized or not...
          this caused albums where resize_size was off to have the table width set to 0.

        * Fix: Extra-long filename prevention in save_photos.php, as well as verifying
          that the uploaded file is a valid image format before saving to the temp
          directory

2004-08-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b116

	* Fix: Enable slideshow in albums containing only sub-albums when
	  slideshow_recursive is yes.

2004-08-17  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b115

	* Change: Code cleanups in util.php

	* Fix: Moved return out of if clause in getFilesVar() and getEnvVar()

2004-08-17  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b114

	* Fix: Added missing ) in classes/Album.php

2004-08-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b113
