@@ -1,3 +1,8 @@
+2004-08-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b122
+
+        * Fix: Make doubly-sure that we're setting mambo session vars when
+          embedded, to prevent the 'No info' error.
+
 2004-08-19  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b121
 
 	* Fix: Typos.
